--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       <h1>Aula do dia 02/10/2017</h1>
       <p><a href="/datavis-course/2017_10_02/acoes.html">acoes.html</a></p>
       <p><a href="/datavis-course/2017_10_02/movies_d3_dc.html">movies_d3_dc.html</a></p>
+      
+      <h1>Aula do dia 09/10/2017</h1>
+      <p><a href="/datavis-course/2017_10_09/earthquakes.html">earthquakes.html</a></p>
 
     </div><!-- /.container -->
 
