--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
       <h1>Aula do dia 09/10/2017</h1>
       <p><a href="/datavis-course/2017_10_09/earthquakes.html">earthquakes.html</a></p>
       <p><a href="/datavis-course/2017_10_09/earthquakes_map.html">earthquakes_map.html</a></p>
+      
+      <h1>Aula do dia 23/10/2017</h1>
+      <p><a href="/datavis-course/2017_10_23/chicago_crime.html">chicago_crime.html</a></p>
             
       <h1>Teste de gráfico de rede (Teste para o projeto final)</h1>
       <p><a href="/datavis-course/graph_net_test/index.html">index.html</a></p>
