--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
       <p><a href="/datavis-course/2017_10_30/songs.html">songs.html</a></p>
       <p><a href="/datavis-course/2017_10_30/lesmiserables.html">lesmiserables.html</a></p>
             
+      <h1>Aula do dia 06/11/2017</h1>
+      <p><a href="/datavis-course/2017_11_06/usa.html">usa.html</a></p>
+      <p><a href="/datavis-course/2017_11_06/crimes.html">crimes.html</a></p>
+      
       <h1>Teste de gráfico de rede (Teste para o projeto final)</h1>
       <p><a href="/datavis-course/graph_net_test/index.html">index.html</a></p>
 
