--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       <p><a href="/datavis-course/2017_11_06/usa.html">usa.html</a></p>
       <p><a href="/datavis-course/2017_11_06/crimes.html">crimes.html</a></p>
       
+      <h1>Aula do dia 20/11/2017</h1>
+      <p><a href="/datavis-course/2017_11_20/usa.html">usa.html</a></p>
+      <p><a href="/datavis-course/2017_11_20/earthquakes.html">earthquakes.html</a></p>
+      
       <h1>Teste de gráfico de rede (Teste para o projeto final)</h1>
       <p><a href="/datavis-course/graph_net_test/index.html">index.html</a></p>
 
