--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
       <p><a href="/datavis-course/2017_11_20/usa.html">usa.html</a></p>
       <p><a href="/datavis-course/2017_11_20/earthquakes.html">earthquakes.html</a></p>
       
-      <h1>Teste de gráfico de rede (Teste para o projeto final)</h1>
+      <h1>Teste de gráfico de rede</h1>
       <p><a href="/datavis-course/graph_net_test/index.html">index.html</a></p>
+      
+      <h1>Teste de gráfico de rede com dados da FT (Teste para o projeto final)</h1>
+      <p><a href="/datavis-course/FT_graph/index.html">index.html</a></p>
 
     </div><!-- /.container -->
 
