--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
       
       <h1>Teste de gráfico de rede com dados da FT (Teste para o projeto final)</h1>
       <p><a href="/datavis-course/FT_graph/index.html">index.html</a></p>
+      
+      <h1>Teste de gráfico de coordenadas paralelas da FT (Teste para o projeto final)</h1>
+      <p><a href="/datavis-course/FT_Parallel_Coord/index.html">index.html</a></p>
 
     </div><!-- /.container -->
 
