--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       
       <h1>Teste de gráfico de coordenadas paralelas da FT (Teste para o projeto final)</h1>
       <p><a href="/datavis-course/FT_Parallel_Coord/index.html">index.html</a></p>
+      
+      <h1>Teste de gráfico de coordenadas paralelas da FT (Teste para o projeto final)</h1>
+      <p><a href="/datavis-course/FT_Node_Link_Arrow/index.html">index.html</a></p>
 
     </div><!-- /.container -->
 
